--- a/css/heroimage.css
+++ b/css/heroimage.css
@@ -5,7 +5,7 @@ body, html {
 /* The hero image */
 .hero-image {
   /* Use "linear-gradient" to add a darken background effect to the image (photographer.jpg). This will make the text easier to read */
-  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../img/jazz.jpg");
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../img/header.jpg");
 
   /* Set a specific height */
   height: 100%;
@@ -13,36 +13,17 @@ body, html {
 
   /* Position and center the image to scale nicely on all screens */
   background-position: center;
-  background-size: cover;
   background-repeat: no-repeat;
-  background-color: #666666;
+  background-size: cover;
+  
 }
 
 /* Place text in the middle of the image */
 .hero-text {
   text-align: center;
   position: absolute;
-  top: 50%;
+  top: 20%;
   left: 50%;
   transform: translate(-50%, -50%);
   color: white;
 }
-/* unvisited link */
-a:link, a:visited {
-    background-color: rgb(0, 0, 0);
-    color: rgb(255, 255, 255);
-    padding: 10px 20px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-  }
- 
-  a:hover, a:active {
-    background-color: rgb(255, 255, 255);
-    color: rgb(0, 0, 0);
-  }
-  /* Style the list inside the menu */
-  nav ul {
-    list-style-type: none;
-    padding: 0;
-  }
