--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -1,33 +1,26 @@
 * {
     box-sizing: border-box;
   }
-  img {
-    max-width: 100%;
-    height: auto;
-  }
+  
   body {
     font-family: Arial, Helvetica, sans-serif;
   }
   
   /* Style the header */
   header {
-    background-color: rgb(50, 50, 51);
-    padding: 30px;
+    background-image: url(/img/header.jpg);
+    padding-top: 0px;
     text-align: center;
     font-size: 35px;
     color: white;
+    height: 50%;
   }
-  .contheading{
-    padding-left: 10%;
-  }
-  img {
-    max-width:max-content;
-    height: auto;
-  }
+  
   /* Container for flexboxes */
   section {
     display: -webkit-flex;
     display: flex;
+    display:block;
   }
   
   /* Style the navigation menu */
@@ -36,9 +29,41 @@
     -ms-flex: 1;
     flex: 1;
     background: #ccc;
-    padding: 20px;
+    padding: 5px;
+    
+  }
+  /*text start*/
+  .contheading{
+    padding-left: 10%;
+  }
+  /*text end*/
+  /*image start*/
+  img {
+    max-width:max-content;
+    height: auto;
+  } 
+  .center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 100%;
+  } 
+  /*image end*/
+  /* unvisited link */
+  a:link, a:visited {
+    background-color: rgb(247, 245, 245);
+    color: black;
+    padding: 10px 20px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
   }
   
+  a:hover, a:active {
+    background-color: green;
+    color: white;
+  }
+
   /* Style the list inside the menu */
   nav ul {
     list-style-type: none;
@@ -56,10 +81,29 @@
   
   /* Style the footer */
   footer {
-    background-color: #777;
+    background-color: rgb(203, 154, 154);
     padding: 10px;
-    text-align: center;
+    text-align: left;
     color: white;
+  }
+  #myBtn {
+    display: none;
+    position: fixed;
+    bottom: 20px;
+    right: 30px;
+    z-index: 99;
+    font-size: 18px;
+    border: none;
+    outline: none;
+    background-color: red;
+    color: white;
+    cursor: pointer;
+    padding: 15px;
+    border-radius: 4px;
+  }
+  
+  #myBtn:hover {
+    background-color: #555;
   }
   
   /* Responsive layout - makes the menu and the content (inside the section) sit on top of each other instead of next to each other */
